--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -1,46 +1,46 @@
-.aText {
+ .text {
   font-family: sans-serif;
   font-size: 16px;
   text-anchor: middle;
-}
+} 
 
 .active {
   font-weight: bold;
   fill: #000;
   transition: fill 0.3s ease-out;
   text-anchor: middle;
-}
-
+} 
+ 
 .inactive {
   font-weight: lighter;
   fill: #c9c9c9;
   transition: fill 0.3s ease-out;
   text-anchor: middle;
-}
+} 
 
 .inactive:hover {
   fill: #000;
   cursor: pointer;
-}
+} 
 
-/* font size dependent on radius, see app.js */
+font size dependent on radius, see app.js
 .stateText {
   font-family: sans-serif;
   fill: #fff;
   text-anchor: middle;
 }
-
+ 
 .stateCircle {
   fill: #89bdd3;
   stroke: #e3e3e3;
-}
+} 
 
 .chart {
   display: block;
   margin: 0;
-}
-
-.d3-tip {
+} 
+/* 
+/* .d3-tip { */
   padding: 6px;
   font-size: 12px;
   line-height: 1;
@@ -58,13 +58,13 @@
     display: none;
   }
 
-  .aText {
+  .text {
     font-size: 14px;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .aText {
+  .text {
     font-size: 13px;
   }
-}
+} */
