circle label issues

--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -39,8 +39,8 @@ font size dependent on radius, see app.js
   display: block;
   margin: 0;
 } 
-/* 
-/* .d3-tip { */
+
+.d3-tip {
   padding: 6px;
   font-size: 12px;
   line-height: 1;
